// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CompletionProviderStatus errored unchanged 1`] = `
<div>
  <span
    class="styles-module__root___-ALla memori--completion-provider-status--tooltip"
  >
    <span
      class="styles-module__trigger___V2aIF"
      id="base-ui-:r3:"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CompletionProviderStatus errored with provider specified unchanged 1`] = `
<div>
  <span
    class="styles-module__root___-ALla memori--completion-provider-status--tooltip"
  >
    <span
      class="styles-module__trigger___V2aIF"
      id="base-ui-:r5:"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CompletionProviderStatus unchanged 1`] = `
<div>
  <span
    class="styles-module__root___-ALla memori--completion-provider-status--tooltip"
  >
    <span
      class="styles-module__trigger___V2aIF"
      id="base-ui-:r1:"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`renders CompletionProviderStatus with provider specified unchanged 1`] = `<div />`;
